--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/AppTheme">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -35,14 +35,19 @@
 
         <activity
             android:name="com.github.jovenpableo.friendtag.MainActivity"
-            android:label="Tag">
-        </activity>
+            android:label="Tag" />
         <activity
             android:name="com.github.jovenpableo.friendtag.MapActivity"
             android:label="@string/app_name" />
         <activity
             android:name="com.github.jovenpableo.friendtag.FriendsActivity"
-            android:label="Tag" />
+            android:label="Tag">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
