--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -48,9 +48,13 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.github.jovenpableo.friendtag.FriendsActivity"
-            android:label="Tag"/>
-        <activity android:name="com.github.jovenpableo.friendtag.ProfileActivity">
-        </activity>
+            android:label="Tag" />
+        <activity android:name="com.github.jovenpableo.friendtag.ProfileActivity"></activity>
+
+        <service
+            android:name="com.github.jovenpableo.friendtag.LocationService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
